fix: add better spacing on mobile
feat: add mobile size change on image/title/header block

--- a/src/main/resources/assets/styles/foundation/_content.scss
+++ b/src/main/resources/assets/styles/foundation/_content.scss
@@ -352,6 +352,14 @@ html body {
 
   main {
     & > .content-holder {
+      &.padding-top {
+        padding-top: 20px;
+      }
+
+      &.padding-bottom {
+        padding-bottom: 20px;
+      }
+
       & > .content {
         width: calc(100% - 40px);
         margin-left: auto;
